Revision history for FusionInventory agent

2.7 not yet released

core:
* Fix #643, #863: Force XML UTF-8 encoding when communicating with server

inventory:
* Fix #897: Fix cpu analysis on win32 to support inventory of different cpus

2.6 Thu, 26 Nov 2020

core:
* as explain in Version.pm comments, actual versioning is problematic for CPAN versions,
  so any future version will probably be defined as only major.minor but evantually
  as major.minor_rev if a package revision is necessary. This policy could be revised
  after any major upgrade.
* Fix configuration reloading to keep set script options
* Avoid a not critical perl error while reloading HTTP server
* Fix #820: Fix config reading to permit completly empty settings

inventory:
* Bump Inventory task version to 1.10
* Fix #771: added Acer monitor serial support for models (G227HQL, G236HL, R221Q, S273HL)
* Fix #787: fix debian package reporting when size is not defined
* Battery capacity support provides now canonical values
* Battery capacity support permits to compute battery capacity usage, thanks to Thierry Bugier
* Fix #819: Surface Go 2 was recongized as Hyper-V
* Fix #825: Enhanced disk encryption detection under linux
* Fix #829: added other Acer monitor serial support (H226HQL, K222HQL, SA220Q)
* Enhanced Qemu KVM virtualization detection, thanks to Rico29
* Dmidecode output parsing cleanup
* Fix #804: Filter out virtual overlay FS while using docker
* Fix #540: Added powersupplies support on MacOS
* Fix #797: Fix ASM storage inventory
* Better canonical manufacturer reporting
* Fix Snap software inventory support with long summary on a package
* Added PartNumber API to enhanced inventory memory and controllers support:
 * Elpida, Hynix, Micron & Samsung memory partnumbers
 * Dell controller partnumbers
* thanks to Vadim Pisarev:
 * Storages can now use smartctl command
 * Enhanced HP Storage inventory with smartctl
 * Memory inventory includes partnumber as MODEL